see if html validator likes this change

--- a/html/dungeon/road_to_the_end.html
+++ b/html/dungeon/road_to_the_end.html
@@ -26,93 +26,108 @@
               <p>If you successfully make it through to the end, you'll find yourself arriving at a strange<br>new area unlike any other location in the game, and your save file will gain a Shiren icon.</p>
               <p>Side note: Escape Scrolls can be found on 30F, 50F, and 70F.</p>
               <ul>
-                <li><a href="#important_items">Important Items</a></li>
-                <ul>
-                  <li><a href="#weapon">Weapon</a></li>
+                <li><a href="#important_items">Important Items</a>
                   <ul>
-                    <li><a href="#main_weapon">Main Weapon</a></li>
-                    <li><a href="#weapon_seals">Recommended Seals</a></li>
+                    <li><a href="#weapon">Weapon</a>
+                      <ul>
+                        <li><a href="#main_weapon">Main Weapon</a></li>
+                        <li><a href="#weapon_seals">Recommended Seals</a></li>
+                      </ul>
+                    </li>
+                    <li><a href="#shield">Shield</a>
+                      <ul>
+                        <li><a href="#main_shield">Main Shield</a></li>
+                        <li><a href="#shield_seals">Recommended Seals</a></li>
+                      </ul>
+                    </li>
+                    <li><a href="#bracelet">Bracelet</a></li>
+                    <li><a href="#staff">Staff</a></li>
+                    <li><a href="#scroll">Scroll</a></li>
+                    <li><a href="#grass">Grass</a></li>
+                    <li><a href="#pot">Pot</a></li>
                   </ul>
-                  <li><a href="#shield">Shield</a></li>
+                </li>
+                <li><a href="#identifying_items">Identifying Items</a>
                   <ul>
-                    <li><a href="#main_shield">Main Shield</a></li>
-                    <li><a href="#shield_seals">Recommended Seals</a></li>
+                    <li><a href="#identify_equipment">Weapon + Shield</a></li>
+                    <li><a href="#identify_bracelet">Bracelet</a></li>
+                    <li><a href="#identify_staff">Staff</a></li>
+                    <li><a href="#identify_scroll">Scroll</a></li>
+                    <li><a href="#identify_grass">Grass</a></li>
+                    <li><a href="#identify_pot">Pot</a></li>
                   </ul>
-                  <li><a href="#bracelet">Bracelet</a></li>
-                  <li><a href="#staff">Staff</a></li>
-                  <li><a href="#scroll">Scroll</a></li>
-                  <li><a href="#grass">Grass</a></li>
-                  <li><a href="#pot">Pot</a></li>
-                </ul>
-                <li><a href="#identifying_items">Identifying Items</a></li>
-                <ul>
-                  <li><a href="#identify_equipment">Weapon + Shield</a></li>
-                  <li><a href="#identify_bracelet">Bracelet</a></li>
-                  <li><a href="#identify_staff">Staff</a></li>
-                  <li><a href="#identify_scroll">Scroll</a></li>
-                  <li><a href="#identify_grass">Grass</a></li>
-                  <li><a href="#identify_pot">Pot</a></li>
-                </ul>
-                <li><a href="#floor_guide">Floor Guide</a></li>
-                <ul>
-                  <li><a href="#floor_1_4">01~04F</a></li>
+                </li>
+                <li><a href="#floor_guide">Floor Guide</a>
                   <ul>
-                    <li><a href="#floor_1_4_basics">Basics</a></li>
-                    <li><a href="#floor_1_4_monsters">Monsters</a></li>
-                    <li><a href="#cave_mamel_hunting">Cave Mamel Hunting</a></li>
-                    <li><a href="#floor_1_4_items">Items</a></li>
+                    <li><a href="#floor_1_4">01~04F</a>
+                      <ul>
+                        <li><a href="#floor_1_4_basics">Basics</a></li>
+                        <li><a href="#floor_1_4_monsters">Monsters</a></li>
+                        <li><a href="#cave_mamel_hunting">Cave Mamel Hunting</a></li>
+                        <li><a href="#floor_1_4_items">Items</a></li>
+                      </ul>
+                    </li>
+                    <li><a href="#floor_5_8">05~08F</a>
+                      <ul>
+                        <li><a href="#floor_5_8_armordillo_items">Obtaining Items w/Armordillo Pop</a></li>
+                        <li><a href="#floor_5_8_arrows">Obtaining Iron Arrows</a></li>
+                      </ul>
+                    </li>
+                    <li><a href="#floor_9_12">9~12F</a>
+                      <ul>
+                        <li><a href="#floor_9_12_food">Food Related (Nigiri Morph + Mixer)</a></li>
+                        <li><a href="#floor_9_12_monsters">Monsters</a></li>
+                        <li><a href="#floor_9_12_other">Other Tips</a></li>
+                      </ul>
+                    </li>
+                    <li><a href="#floor_13_15">13~15F</a></li>
+                    <li><a href="#floor_16_21">16~21F</a>
+                      <ul>
+                        <li><a href="#floor_16_21_twisty_hani">Twisty Hani Hunting</a></li>
+                      </ul>
+                    </li>
+                    <li><a href="#floor_22_29">22~29F</a>
+                      <ul>
+                        <li><a href="#floor_22_29_monsters_1">Monsters (22~24F)</a></li>
+                        <li><a href="#floor_22_29_monsters_2">Monsters (25~29F)</a></li>
+                        <li><a href="#floor_22_29_golden">Regarding the Golden Interval</a></li>
+                      </ul>
+                    </li>
+                    <li><a href="#floor_30_39">30~39F</a>
+                      <ul>
+                        <li><a href="#floor_30_39_monsters">Monsters</a></li>
+                        <li><a href="#floor_30_39_preparing">Preparing for the Second Half</a></li>
+                      </ul>
+                    </li>
+                    <li><a href="#floor_40_49">40~49F</a></li>
+                    <li><a href="#floor_50_59">50~59F</a>
+                      <ul>
+                        <li><a href="#floor_50_59_monsters">Monsters</a></li>
+                        <li><a href="#floor_50_59_more_items">Obtaining More Items</a></li>
+                        <li><a href="#floor_50_59_mr_drone">Mr. Drone Hunting</a></li>
+                      </ul>
+                    </li>
+                    <li><a href="#floor_60_69">60~69F</a></li>
+                    <li><a href="#floor_70_85">70~85F</a></li>
+                    <li><a href="#floor_86_99">86~99F</a>
+                      <ul>
+                        <li><a href="#floor_86_90">86~90F</a></li>
+                        <li><a href="#floor_90">90F+</a></li>
+                      </ul>
+                    </li>
+                    <li><a href="#floor_end">The End</a></li>
                   </ul>
-                  <li><a href="#floor_5_8">05~08F</a></li>
+                </li>
+                <li><a href="#monsters">Monsters</a>
                   <ul>
-                    <li><a href="#floor_5_8_armordillo_items">Obtaining Items w/Armordillo Pop</a></li>
-                    <li><a href="#floor_5_8_arrows">Obtaining Iron Arrows</a></li>
+                    <li><a href="#monsters_golden">Golden Interval</a></li>
                   </ul>
-                  <li><a href="#floor_9_12">9~12F</a></li>
+                </li>
+                <li><a href="#items">Items</a>
                   <ul>
-                    <li><a href="#floor_9_12_food">Food Related (Nigiri Morph + Mixer)</a></li>
-                    <li><a href="#floor_9_12_monsters">Monsters</a></li>
-                    <li><a href="#floor_9_12_other">Other Tips</a></li>
+                    <li><a href="#shop_trader">Shop + Trader</a></li>
                   </ul>
-                  <li><a href="#floor_13_15">13~15F</a></li>
-                  <li><a href="#floor_16_21">16~21F</a></li>
-                  <ul>
-                    <li><a href="#floor_16_21_twisty_hani">Twisty Hani Hunting</a></li>
-                  </ul>
-                  <li><a href="#floor_22_29">22~29F</a></li>
-                  <ul>
-                    <li><a href="#floor_22_29_monsters_1">Monsters (22~24F)</a></li>
-                    <li><a href="#floor_22_29_monsters_2">Monsters (25~29F)</a></li>
-                    <li><a href="#floor_22_29_golden">Regarding the Golden Interval</a></li>
-                  </ul>
-                  <li><a href="#floor_30_39">30~39F</a></li>
-                  <ul>
-                    <li><a href="#floor_30_39_monsters">Monsters</a></li>
-                    <li><a href="#floor_30_39_preparing">Preparing for the Second Half</a></li>
-                  </ul>
-                  <li><a href="#floor_40_49">40~49F</a></li>
-                  <li><a href="#floor_50_59">50~59F</a></li>
-                  <ul>
-                    <li><a href="#floor_50_59_monsters">Monsters</a></li>
-                    <li><a href="#floor_50_59_more_items">Obtaining More Items</a></li>
-                    <li><a href="#floor_50_59_mr_drone">Mr. Drone Hunting</a></li>
-                  </ul>
-                  <li><a href="#floor_60_69">60~69F</a></li>
-                  <li><a href="#floor_70_85">70~85F</a></li>
-                  <li><a href="#floor_86_99">86~99F</a></li>
-                  <ul>
-                    <li><a href="#floor_86_90">86~90F</a></li>
-                    <li><a href="#floor_90">90F+</a></li>
-                  </ul>
-                  <li><a href="#floor_end">The End</a></li>
-                </ul>
-                <li><a href="#monsters">Monsters</a></li>
-                <ul>
-                  <li><a href="#monsters_golden">Golden Interval</a></li>
-                </ul>
-                <li><a href="#items">Items</a></li>
-                <ul>
-                  <li><a href="#shop_trader">Shop + Trader</a></li>
-                </ul>
+                </li>
                 <li><a href="#golden_interval">Golden Interval</a></li>
                 <li><a href="#high_score">High Score</a></li>
                 <li><a href="#speed_running">Speed Running</a></li>
@@ -1527,7 +1542,6 @@
     ■□□□□□□□■■
     ■■■■■■■■■■
           </pre>
-          </dl>
           <h3 id="floor_9_12">09~12F</h3>
           <p>The first major grinding area of this dungeon.<br>Nigiri Morph (9~10F), Mixer (9~15F), and Mixermon (12~20F) make an appearance,<br>along with Boy Cart (7~9F), Mr. Helico (10F), Taishodon (10~12F), and Kengo (11~12F).<br>How you utilize these monsters will play a large role in how the rest of the adventure progresses.</p>
           <h4 id="floor_9_12_food">Food Related (Nigiri Morph + Mixer)</h4>
