more changes for validator

--- a/html/dungeon/road_to_the_end.html
+++ b/html/dungeon/road_to_the_end.html
@@ -1,4 +1,5 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
   <head>
     <title>Road To The End - Shiren 2 Wiki</title>
     <link rel="icon" href="/shiren2/favicon.ico">
@@ -9,7 +10,7 @@
         crossorigin="anonymous"></script>
     <link rel="stylesheet" href="../../css/index.css">
     <link rel="stylesheet" href="../../css/dungeon.css">
-    <script type="text/javascript" src="../../js/dungeon.js"></script>
+    <script src="../../js/dungeon.js"></script>
   </head>
   <body>
     <div class="wrapper">
@@ -136,7 +137,7 @@
             <div class="dungeon_desc_table">
               <table>
                 <tr>
-                  <td colspan="2"><img src="/shiren2/image/dungeon/road_to_the_end.png" width="200" height="auto"></td>
+                  <td colspan="2"><img src="/shiren2/image/dungeon/road_to_the_end.png" width="200"></td>
                 </tr>
                 <tr>
                   <th>Floors</th>
@@ -690,6 +691,7 @@
           <h3 id="identify_bracelet">Bracelet</h3>
           <dl>
             <dt>Price Identification</dt>
+            <dd></dd>
           </dl>
           <p>Bracelet price chart (<b>F</b>loor, <b>S</b>hop):</p>
           <table>
@@ -884,6 +886,7 @@
           <p class="dungeon_table_notes">※ Phantasm Bracelet can also be obtained from a Presto Pot or Surprise Pot.</p>
           <dl>
             <dt>Equip Identification</dt>
+            <dd></dd>
           </dl>
           <p>Equipping a bracelet won't reveal its name, so an Identify Scroll, Pot, or Statue must be used to fully identify it.<br>Some bracelets like No Control and Breadcrumb have negative effects and could be troublesome if they're cursed,<br>so you'll generally want to avoid equipping unidentified bracelets until you have a way to unequip them if needed.<br>Many bracelets don't have an immediate effect, so you might be introducing risk to your adventure without any reward.<br>However, if you find a Strip Trap, go ahead and attempt to identify your bracelets by looking at the following tables.</p>
           <p>Identified by equipping:</p>
@@ -1513,6 +1516,7 @@
             <dt>Wall Collapse Scroll</dt>
             <dd>Leave a gap of at least 10 tiles between Shiren and a Boy Cart, and collect the arrows that fall to the ground.<br>Can be difficult if your shield is weak, but you can use items like Knockback or Swap Staff to quickly gain distance.<br>If all goes well, you can expect to collect around 70 arrows per floor.</dd>
             <dt>Terrain</dt>
+            <dd></dd>
             </dl>
             <pre class="dungeon_diagram">
 
@@ -6067,25 +6071,29 @@
           <h2 id="golden_interval">Golden Interval</h2>
           <dl>
             <dt>Notes that apply to all three Golden Intervals</dt>
+            <dd></dd>
           </dl>
           <ul>
             <li>Stronger monsters appear, so be careful not to collapse.</li>
             <li>Pitfalls and Flood Traps don't get generated.</li>
-            <li><span class="dungeon_desc_warning">Food and Grass items cannot be found on the floor</span>, so be careful of hunger.</li>
-            <ul>
-              <li>Defeat monsters using a weapon with the 飯 (Riceball) seal to obtain food inside Golden Intervals.</li>
-            </ul>
-            <li>Water Pots cannot be refilled.</li>
-            <ul>
-              <li>Techniques involving splashing water on Blank Scrolls or monsters have a limited number of uses.</li>
-              <li>Think carefully before splashing water, especially against Lashaaga and Megataur.</li>
-            </ul>
+            <li><span class="dungeon_desc_warning">Food and Grass items cannot be found on the floor</span>, so be careful of hunger.
+              <ul>
+                <li>Defeat monsters using a weapon with the 飯 (Riceball) seal to obtain food inside Golden Intervals.</li>
+              </ul>
+            </li>
+            <li>Water Pots cannot be refilled.
+              <ul>
+                <li>Techniques involving splashing water on Blank Scrolls or monsters have a limited number of uses.</li>
+                <li>Think carefully before splashing water, especially against Lashaaga and Megataur.</li>
+              </ul>
+            </li>
             <li>Insert Gitan into Storage Pots, and use Gitan as a projectile to deal with troublesome monsters.</li>
             <li>Most items found inside Golden Intervals can be sold for a large amount of Gitan.</li>
-            <li>The item table may be small, but powerful items can be found.</li>
-            <ul>
-              <li>Dragon Killer and Dragon Shield are exclusive to Golden Intervals.</li>
-            </ul>
+            <li>The item table may be small, but powerful items can be found.
+              <ul>
+                <li>Dragon Killer and Dragon Shield are exclusive to Golden Intervals.</li>
+              </ul>
+            </li>
             <li>Wooden Arrow Traps can be generated, meaning they can be used to replenish arrows.</li>
           </ul>
           <h3>First (6~10F, Return 11F)</h3>
@@ -6216,42 +6224,48 @@
           <ul>
             <li>Steal from shops and make as many 1,000,000 Gitan bags as you can.</li>
             <li>Gather as many vouchers as you can from Traders to help with stealing or reselling at a profit.</li>
-            <li>Synthesize expensive equipment, such as Wonder Pick, Nirvana Shield, Daisangen, Helix Shield, etc.</li>
-            <ul>
-              <li>Dragon Killers can be obtained using an ally Armordillo or Iai monster inside a Golden Interval.</li>
-              <li>Pickaxes and Heavy Shields can be obtained using an ally Armordillo or Kengo family monster.</li>
-              <li>Dragon Tile Bracelets require many Restock Scrolls gathered using an Armordillo family monster.</li>
-              <li>Helix Shield is possible on paper, but Fuuma Shield is very rare, and it also needs to be<br>upgraded to +99, so it's not realistic to aim for it. That said, it might be a fun challenge.</li>
-              <li>Kaburasutegi and Fiery Fuuma require a blacksmith, so they cannot be synthesized in this dungeon.</li>
-            </ul>
+            <li>Synthesize expensive equipment, such as Wonder Pick, Nirvana Shield, Daisangen, Helix Shield, etc.
+              <ul>
+                <li>Dragon Killers can be obtained using an ally Armordillo or Iai monster inside a Golden Interval.</li>
+                <li>Pickaxes and Heavy Shields can be obtained using an ally Armordillo or Kengo family monster.</li>
+                <li>Dragon Tile Bracelets require many Restock Scrolls gathered using an Armordillo family monster.</li>
+                <li>Helix Shield is possible on paper, but Fuuma Shield is very rare, and it also needs to be<br>upgraded to +99, so it's not realistic to aim for it. That said, it might be a fun challenge.</li>
+                <li>Kaburasutegi and Fiery Fuuma require a blacksmith, so they cannot be synthesized in this dungeon.</li>
+              </ul>
+            </li>
           </ul>
           <h2 id="speed_running">Speed Running</h2>
           <ul>
-            <li>Healing Sword, Scout Bracelet, and Phantasm Bracelet are required.</li>
-            <ul>
-              <li>Unequip Phantasm Bracelet over water or inside a wall to warp to a different room.</li>
-            </ul>
-            <li>Shiren 2 doesn't have items that reveal where the stairs is, so you have to rely on intuition and luck.</li>
-            <ul>
-              <li>Wall Collapse Scrolls can be used, but a negative statue effect could lead to time loss or a collapse.</li>
-              <li>It's best to defeat monsters from inside walls and search for the stairs like normal.</li>
-            </ul>
-            <li>There's no time to upgrade equipment, so focus on seals instead of finding a good main weapon or shield.</li>
-            <ul>
-              <li>Sword: 回 (Healing Sword), 三 (Razor Wind), 弟 (Otogiriso)</li>
-              <li>Shield: 山 (Echo Shield), 皮 (Leather Shield), 見 (Evasive Shield)</li>
-            </ul>
-            <li>It's best to have 3 Extinction Scrolls. Use them in the order of Archdragon → Cranky Tank → Typhoon.</li>
-            <ul>
-              <li>These three monsters have long attack animations, leading to time loss.</li>
-              <li>Extinction Scrolls can only be found in shops, so you typically use Blank:Extinction scrolls.</li>
-              <li>Typhoon can quickly shatter Phantasm Bracelets, so have at least 1 scroll on hand proceeding to 86F.</li>
-              <li>If you don't have enough scrolls, skip using one on Archdragon, since it's often generated asleep.</li>
-            </ul>
-            <li>Use standard power up techniques between 20~30F so that you can rush through the second half smoothly.</li>
-            <ul>
-              <li>Phantasm Bracelet can cover the lack of defense, so focus on weapon seals and increasing strength.</li>
-            </ul>
+            <li>Healing Sword, Scout Bracelet, and Phantasm Bracelet are required.
+              <ul>
+                <li>Unequip Phantasm Bracelet over water or inside a wall to warp to a different room.</li>
+              </ul>
+            </li>
+            <li>Shiren 2 doesn't have items that reveal where the stairs is, so you have to rely on intuition and luck.
+              <ul>
+                <li>Wall Collapse Scrolls can be used, but a negative statue effect could lead to time loss or a collapse.</li>
+                <li>It's best to defeat monsters from inside walls and search for the stairs like normal.</li>
+              </ul>
+            </li>
+            <li>There's no time to upgrade equipment, so focus on seals instead of finding a good main weapon or shield.
+              <ul>
+                <li>Sword: 回 (Healing Sword), 三 (Razor Wind), 弟 (Otogiriso)</li>
+                <li>Shield: 山 (Echo Shield), 皮 (Leather Shield), 見 (Evasive Shield)</li>
+              </ul>
+            </li>
+            <li>It's best to have 3 Extinction Scrolls. Use them in the order of Archdragon → Cranky Tank → Typhoon.
+              <ul>
+                <li>These three monsters have long attack animations, leading to time loss.</li>
+                <li>Extinction Scrolls can only be found in shops, so you typically use Blank:Extinction scrolls.</li>
+                <li>Typhoon can quickly shatter Phantasm Bracelets, so have at least 1 scroll on hand proceeding to 86F.</li>
+                <li>If you don't have enough scrolls, skip using one on Archdragon, since it's often generated asleep.</li>
+              </ul>
+            </li>
+            <li>Use standard power up techniques between 20~30F so that you can rush through the second half smoothly.
+              <ul>
+                <li>Phantasm Bracelet can cover the lack of defense, so focus on weapon seals and increasing strength.</li>
+              </ul>
+            </li>
           </ul>
         </div>
       </div>
