added alt text to dungeon screenshot image

--- a/html/dungeon/road_to_the_end.html
+++ b/html/dungeon/road_to_the_end.html
@@ -137,7 +137,7 @@
             <div class="dungeon_desc_table">
               <table>
                 <tr>
-                  <td colspan="2"><img src="/shiren2/image/dungeon/road_to_the_end.png" width="200"></td>
+                  <td colspan="2"><img alt="Dungeon Screenshot" src="/shiren2/image/dungeon/road_to_the_end.png" width="200"></td>
                 </tr>
                 <tr>
                   <th>Floors</th>
