why are images broken?

--- a/html/system/trap.html
+++ b/html/system/trap.html
@@ -35,10 +35,10 @@
             <td>6%</td>
           </tr>
           <tr>
-            <td></td>
-            <td>Burrs Trap</td>
+            <td><img src="/shiren2/image/trap/trap_burr.png" alt="Burr"></td>
+            <td>Burr Trap</td>
             <td>9</td>
-            <td>Burrs fall from above, dealing 9 damage.</td>
+            <td>Chestnut Burrs fall from above, dealing 9 damage.</td>
             <td>8%</td>
           </tr>
           <tr>
