--- a/html/system/trap.html
+++ b/html/system/trap.html
@@ -28,175 +28,175 @@
             <th>Break</th>
           </tr>
           <tr>
-            <td><img src="/shiren2/image/trap/trap_droplet.png" alt="Droplet"></td>
+            <td><img src="/shiren2/image/trap/trap_droplet.png" alt="Icon"></td>
             <td>Droplet Trap</td>
             <td>5</td>
             <td>A drop of water falls from above, dealing 5 damage.</td>
             <td>6%</td>
           </tr>
           <tr>
-            <td><img src="/shiren2/image/trap/trap_burr.png" alt="Burr"></td>
+            <td><img src="/shiren2/image/trap/trap_burr.png" alt="Icon"></td>
             <td>Burr Trap</td>
             <td>9</td>
             <td>Chestnut Burrs fall from above, dealing 9 damage.</td>
             <td>8%</td>
           </tr>
           <tr>
-            <td></td>
+            <td><img src="/shiren2/image/trap/trap_rockfall.png" alt="Icon"></td>
             <td>Rockfall Trap</td>
             <td>13</td>
             <td>A large rock falls from above, dealing 13 damage.</td>
             <td>13%</td>
           </tr>
           <tr>
-            <td></td>
+            <td><img src="/shiren2/image/trap/trap_rockslide.png" alt="Icon"></td>
             <td>Rockslide Trap</td>
             <td>30</td>
             <td>Multiple large rocks fall from above, dealing 30 damage.<br>Hits all characters in a 1-tile radius around the trap.<br>Can also hit underwater or frozen monsters.</td>
             <td>10%</td>
           </tr>
           <tr>
-            <td></td>
+            <td><img src="/shiren2/image/trap/trap_wooden_arrow.png" alt="Icon"></td>
             <td>Wooden Arrow Trap</td>
             <td>5</td>
             <td>A Wooden Arrow comes from the right side of the<br>direction the character is facing, dealing 5 damage.<br>Can be avoided using a Dodge Shield or Reflect Shield.<br>The arrow can be picked up if dodged or reflected at a wall.<br>The arrow will pierce through walls until it hits something.</td>
             <td>10%</td>
           </tr>
           <tr>
-            <td></td>
+            <td><img src="/shiren2/image/trap/trap_iron_arrow.png" alt="Icon"></td>
             <td>Iron Arrow Trap</td>
             <td>10</td>
             <td>An Iron Arrow comes from the right side of the<br>direction the character is facing, dealing 10 damage.<br>Can be avoided using a Dodge Shield or Reflect Shield.<br>The arrow can be picked up if dodged or reflected at a wall.<br>The arrow will pierce through walls until it hits something.</td>
             <td>10%</td>
           </tr>
           <tr>
-            <td></td>
+            <td><img src="/shiren2/image/trap/trap_poison_arrow.png" alt="Icon"></td>
             <td>Poison Arrow Trap</td>
             <td>3~6</td>
             <td>A poison arrow comes from the right side of the direction the<br>character is facing, dealing 3~6 damage and lowering their strength.<br>Can be avoided using a Dodge Shield or Reflect Shield.<br>The arrow cannot be picked up if dodged or reflected at a wall,<br>and cannot be swallowed by a Mixer family monster.<br>The arrow will pierce through walls until it hits something.<br><br>Shiren or Ally: Lowers strength by 1 point.<br>Monster: Lowers strength to 0, making regular attacks deal 1 damage.</td>
             <td>10%</td>
           </tr>
           <tr>
-            <td></td>
+            <td><img src="/shiren2/image/trap/trap_log.png" alt="Icon"></td>
             <td>Log Trap</td>
             <td>3~7</td>
             <td>A log comes flying from the right side of the direction the<br>character is facing, dealing 3~7 damage and knocking them away.</td>
             <td>8%</td>
           </tr>
           <tr>
-            <td></td>
+            <td><img src="/shiren2/image/trap/trap_pitfall.png" alt="Icon"></td>
             <td>Pitfall</td>
             <td>3~6</td>
             <td>Deals 3~6 damage, and advances to the floor below the current floor.<br>The floor advancing effect is nullified in areas such as Napus Storage,<br>boss rooms, or Shuffle Dungeon maps (excluding Shuten Mid 12F).<br><br>Monster: The monster falls into a void, instantly defeating it.<br>(Monsters defeated using Pitfalls won't drop items).</td>
             <td>100%</td>
           </tr>
           <tr>
-            <td></td>
+            <td><img src="/shiren2/image/trap/trap_trip_stone.png" alt="Icon"></td>
             <td>Trip Stone</td>
             <td>2~4</td>
             <td></td>
             <td>10%</td>
           </tr>
           <tr>
-            <td></td>
+            <td><img src="/shiren2/image/trap/trap_landmine.png" alt="Icon"></td>
             <td>Landmine</td>
             <td>50%</td>
             <td></td>
             <td>8%</td>
           </tr>
           <tr>
-            <td></td>
+            <td><img src="/shiren2/image/trap/trap_big_landmine.png" alt="Icon"></td>
             <td>Big Landmine</td>
             <td>75%</td>
             <td></td>
             <td>8%</td>
           </tr>
           <tr>
-            <td></td>
+            <td><img src="/shiren2/image/trap/trap_flood.png" alt="Icon"></td>
             <td>Flood Trap</td>
             <td>75%</td>
             <td></td>
             <td>100%</td>
           </tr>
           <tr>
-            <td></td>
+            <td><img src="/shiren2/image/trap/trap_rust.png" alt="Icon"></td>
             <td>Rust Trap</td>
             <td>-</td>
             <td></td>
             <td>13%</td>
           </tr>
           <tr>
-            <td></td>
+            <td><img src="/shiren2/image/trap/trap_summon.png" alt="Icon"></td>
             <td>Summon Trap</td>
             <td>-</td>
             <td></td>
             <td>100%</td>
           </tr>
           <tr>
-            <td></td>
+            <td><img src="/shiren2/image/trap/trap_spin.png" alt="Icon"></td>
             <td>Spin Trap</td>
             <td>-</td>
             <td></td>
             <td>15%</td>
           </tr>
           <tr>
-            <td></td>
+            <td><img src="/shiren2/image/trap/trap_strip.png" alt="Icon"></td>
             <td>Strip Trap</td>
             <td>-</td>
             <td></td>
             <td>13%</td>
           </tr>
           <tr>
-            <td></td>
+            <td><img src="/shiren2/image/trap/trap_spoil.png" alt="Icon"></td>
             <td>Spoil Trap</td>
             <td>-</td>
             <td></td>
             <td>8%</td>
           </tr>
           <tr>
-            <td></td>
+            <td><img src="/shiren2/image/trap/trap_bear.png" alt="Icon"></td>
             <td>Bear Trap</td>
             <td>-</td>
             <td></td>
             <td>6%</td>
           </tr>
           <tr>
-            <td></td>
+            <td><img src="/shiren2/image/trap/trap_slow.png" alt="Icon"></td>
             <td>Slow Trap</td>
             <td>-</td>
             <td></td>
             <td>10%</td>
           </tr>
           <tr>
-            <td></td>
+            <td><img src="/shiren2/image/trap/trap_sleep.png" alt="Icon"></td>
             <td>Sleep Trap</td>
             <td>-</td>
             <td></td>
             <td>15%</td>
           </tr>
           <tr>
-            <td></td>
+            <td><img src="/shiren2/image/trap/trap_spring.png" alt="Icon"></td>
             <td>Spring</td>
             <td>-</td>
             <td></td>
             <td>10%</td>
           </tr>
           <tr>
-            <td></td>
+            <td><img src="/shiren2/image/trap/trap_monster.png" alt="Icon"></td>
             <td>Monster Trap</td>
             <td>-</td>
             <td></td>
             <td>-</td>
           </tr>
           <tr>
-            <td></td>
+            <td><img src="/shiren2/image/trap/trap_chain.png" alt="Icon"></td>
             <td>Chain Trap</td>
             <td>-</td>
             <td></td>
             <td>7%</td>
           </tr>
           <tr>
-            <td></td>
+            <td><img src="/shiren2/image/trap/trap_one_way.png" alt="Icon"></td>
             <td>One-Way Trap</td>
             <td>-</td>
             <td></td>
